--- a/1-8/practice_1-8.html
+++ b/1-8/practice_1-8.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <mata name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" >
 	<link rel="stylesheet" type="text/css" href="practice_1-8.css">
 	<title>演習問題1－8</title>
