--- a/task_Ⅰ/practice_1-8.html
+++ b/task_Ⅰ/practice_1-8.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-    <mata name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" >
 	<link rel="stylesheet" type="text/css" href="practice_1-8.css">
 	<title>演習問題1－8</title>
@@ -16,7 +16,7 @@
         	<img class="main-img"src="img/flow01.png" alt="作業１">
         	<section class="main-block">
         		<h3 class="main-head">タイトルが入ります。</h3>
-        	    <p class="main-text">文章が入ります。文章が入ります。文<br>章が入ります。文章が入ります。文章<br>が入ります。文章が入ります。文章が<br>入ります。文章が入ります。文章が入<br>ります。</p>
+        	    <p class="main-text">文章が入ります。文章が入ります。文<br class="br-pc">章が入りま<br class="br-sp">す。文章が入ります。文章<br  class="br-pc">が入ります。文章が入り<br class="br-sp">ます。文章が<br class="br-pc">入ります。文章が入ります。文章が入<br class="br-pc"><br class="br-sp">ります。</p>
             </section>
         </div>
         <div class="main-content-center">
@@ -26,7 +26,7 @@
         	<img class="main-img"src="img/flow02.png" alt="作業2">
         	<section class="main-block">
         	    <h3 class="main-head">タイトルが入ります。</h3>
-        	    <p class="main-text">文章が入ります。文章が入ります。文<br>章が入ります。文章が入ります。文章<br>が入ります。文章が入ります。文章が<br>入ります。文章が入ります。文章が入<br>ります。</p>
+        	    <p class="main-text">文章が入ります。文章が入ります。文<br class="br-pc">章が入ります。文章が入ります。文章<br class="br-pc">が入りま<br class="br-sp">す。文章が入ります。文章が<br class="br-pc">入ります。文章が入り<br class="br-sp">ます。文章が入<br class="br-pc"><br class="br-sp">ります。</p>
         	</section>
         </div>
 		<div class="main-content-right ">
@@ -36,7 +36,7 @@
 			<img class="main-img"src="img/flow03.png" alt="作業3">
 			<section class="main-block">
 			    <h3 class="main-head">タイトルが入ります。</h3>
-			    <p class="main-text">文章が入ります。文章が入ります。文<br>章が入ります。文章が入ります。文章<br>が入ります。文章が入ります。文章が<br>入ります。文章が入ります。文章が入<br>ります。</p>
+			    <p class="main-text">文章が入ります。文章が入ります。文<br class="br-pc">章が入りま<br class="br-sp">す。文章が入ります。文章<br class="br-pc">が入ります。文章が入り<br class="br-sp">ます。文章が<br class="br-pc">入ります。文章が入ります。文章が入<br class="br-pc"><br class="br-sp">ります。</p>
 		    </section>
 		</div>
 	</main>
