--- a/task_Ⅱ/task_Ⅱ.html
+++ b/task_Ⅱ/task_Ⅱ.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<div class="header-box clearfix">
-			<img src="ing/logo.ping" alt="ロゴ">
+			<img src="img/logo.png" alt="ロゴ" width="170" height="70">
 			<nav>
 				<ul class="nav-list">
 					<li class="nav-list-item"><a href="task_Ⅱ.html" >Portfolio</a></li>
